--- a/EasyCashIdentityProject.PresentationLayer/Views/Register/Index.cshtml
+++ b/EasyCashIdentityProject.PresentationLayer/Views/Register/Index.cshtml
@@ -8,7 +8,7 @@
 <!-- Head -->
 <head>
 
-    <title>Easy Cashs Identity - Yeni Kullanıcı Kaydı</title>
+    <title>Easy Cash Identity - Yeni Kullanıcı Kaydı</title>
 
 	<!-- Meta-Tags -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
