--- a/EasyCashIdentityProject.PresentationLayer/Views/Register/Index.cshtml
+++ b/EasyCashIdentityProject.PresentationLayer/Views/Register/Index.cshtml
@@ -39,7 +39,7 @@
 			<input type="text" asp-for="Name" placeholder="Adınz" required="">
 			<input type="text" asp-for="Surname" placeholder="Soyadınız" required="">
 			<input type="text" asp-for="Username" placeholder="Kullanıcı Adınız" required="">
-			<input type="email" asp-for="Email" placeholder="Soyadınız" required="">
+			<input type="email" asp-for="Email" placeholder="Mail Adresiniz" required="">
 			<input type="password" asp-for="Password" placeholder="Şifreniz" required="">
 			<input type="password" asp-for="ConfirmPassword" placeholder="Şifrenizi Tekrar Giriniz" required="">
 			<br /><br />
