--- a/EasyCashIdentityProject.PresentationLayer/Views/MyProfile/Index.cshtml
+++ b/EasyCashIdentityProject.PresentationLayer/Views/MyProfile/Index.cshtml
@@ -1,41 +1,46 @@
-﻿
-@{
+﻿@{
     Layout = null;
 }
-
 <!DOCTYPE html>
 <html lang="en">
-@await Component.InvokeAsync("_CustomerLayoutHeaderPartial")
 
-  <body class="nav-md">
+            <!--  Hader Partial -->
+            @await Component.InvokeAsync("_CustomerLayoutHeaderPartial")
+            <!-- /Hader Partial -->
+
+<body class="nav-md footer_fixed">
     <div class="container body">
-      <div class="main_container">
+        <div class="main_container">
 
-         @await Component.InvokeAsync("_CustomerLayoutSidebarPartial")
-        
-        <!-- top navigation -->
+            <!--  Sidebar Partial -->
+            @await Component.InvokeAsync("_CustomerLayoutSidebarPartial")
+            <!-- /Sidebar Partial -->
+
+            <!-- top navigation Navbar Partial -->
             @await Component.InvokeAsync("_CustomerLayoutNavbarPartial")
-        <!-- /top navigation -->
+            <!-- /top navigation Navbar Partial -->
 
-        <!-- page content -->
-        <div class="right_col" role="main">
-          <div class="">
-            <div class="page-title">
-              <div class="title_left">
-                <h3>Fixed Sidebar <small> Just add class <strong>menu_fixed</strong></small></h3>
-              </div>
+            <!-- page content -->
+            <div class="right_col" role="main">
+                <div class="">
+                    <div class="page-title">
+                        <div class="title_left">
+                         <h2>@RenderBody()</h2>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-        <!-- /page content -->
+            <!-- /page content -->
 
-        <!-- footer content -->
+            <!-- footer content -->
             @await Component.InvokeAsync("_CustomerLayoutFooterPartial")
-        <!-- /footer content -->
-      </div>
+            <!-- /footer content -->
+
+        </div>
     </div>
 
+    <!--  Script Partial -->
     @await Component.InvokeAsync("_CustomerLayoutScriptPartial")
-   
-  </body>
+    <!-- /Script Partial -->
+</body>
 </html>
