--- a/EasyCashIdentityProject.PresentationLayer/Views/Shared/Components/_CustomerLayoutFooterPartial/Default.cshtml
+++ b/EasyCashIdentityProject.PresentationLayer/Views/Shared/Components/_CustomerLayoutFooterPartial/Default.cshtml
@@ -1,6 +1,6 @@
 ﻿<footer>
     <div class="pull-right">
-        Gentelella - Bootstrap Admin Template by <a href="https://colorlib.com">Colorlib</a>
+        Easy Cash Müşteri Paneli @DateTime.Now.Year | Tüm Hakları Saklıdır | <a href="https://colorlib.com">EasyCash</a>
     </div>
     <div class="clearfix"></div>
 </footer>
