--- a/EasyCashIdentityProject.PresentationLayer/Views/MyAccounts/Index.cshtml
+++ b/EasyCashIdentityProject.PresentationLayer/Views/MyAccounts/Index.cshtml
@@ -28,7 +28,7 @@
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
                     <div class="x_title">
-                        <h2> Easy Cash <small> Profil bİlğileri Düzenleme Sayfası </small></h2>
+                        <h2> Easy Cash <small> Profil Bilğileri Düzenleme Sayfası </small></h2>
                         <ul class="nav navbar-right panel_toolbox">
                             <li>
                                 <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
@@ -116,7 +116,7 @@
                             <div class="item form-group">
                                 <label for="password2" class="control-label col-md-3 col-sm-3 col-xs-12">Şifre Tekrar</label>
                                 <div class="col-md-6 col-sm-6 col-xs-12">
-                                    <input id="password2" type="password" asp-for="Password" data-validate-linked="password" class="form-control col-md-7 col-xs-12" required="required">
+                                    <input id="password" type="password" asp-for="CofirmPassword" data-validate-linked="password" class="form-control col-md-7 col-xs-12" required="required">
                                 </div>
                             </div>
          
