--- a/EasyCashIdentityProject.PresentationLayer/Views/Login/Index.cshtml
+++ b/EasyCashIdentityProject.PresentationLayer/Views/Login/Index.cshtml
@@ -23,7 +23,7 @@
 	<link rel="stylesheet" href="~/register/css/style.css" type="text/css" media="all">
 
 	<!-- Fonts -->
-	<link href="//fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
+	<link href="/fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
 	<!-- //Fonts -->
 
 </head>
